# rbitt

./: .gitignore  CLAUDE.md  README.md  issues.md  package.json  protocol.md  qbittorrent.md
.github/workflows/: ci.yml  generate-signing-key.yml  release.yml
examples/: generate_torrents.rs
examples/torrents/: example_hybrid.torrent  example_v1_multi.torrent  example_v1_single.torrent  example_v2.torrent
rbitt.icon/: icon.json
src/: App.css  App.tsx  main.tsx  types.ts  updater.ts  utils.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/oxidebt-bencode/: Cargo.toml
src-tauri/crates/oxidebt-bencode/src/: decode.rs  encode.rs  error.rs  lib.rs  tests.rs  value.rs
src-tauri/crates/oxidebt-cache/: Cargo.toml
src-tauri/crates/oxidebt-cache/src/: block_cache.rs  buffer_pool.rs  lib.rs  memory_budget.rs  piece_cache.rs  tests.rs
src-tauri/crates/oxidebt-constants/: Cargo.toml
src-tauri/crates/oxidebt-constants/src/: lib.rs
src-tauri/crates/oxidebt-dht/: Cargo.toml
src-tauri/crates/oxidebt-dht/src/: error.rs  lib.rs  message.rs  node.rs  routing.rs  server.rs  tests.rs
src-tauri/crates/oxidebt-disk/: Cargo.toml
src-tauri/crates/oxidebt-disk/src/: caching_manager.rs  coalescer.rs  error.rs  io_queue.rs  lib.rs  manager.rs  storage.rs  tests.rs  worker.rs
src-tauri/crates/oxidebt-net/: Cargo.toml
src-tauri/crates/oxidebt-net/src/: bandwidth.rs  error.rs  lib.rs  lsd.rs  pex.rs  tests.rs  upnp.rs
src-tauri/crates/oxidebt-peer/: Cargo.toml
src-tauri/crates/oxidebt-peer/src/: bitfield.rs  choking.rs  connection.rs  error.rs  extension.rs  fast.rs  lib.rs  message.rs  peer_id.rs  piece.rs  tests.rs  transport.rs
src-tauri/crates/oxidebt-torrent/: Cargo.toml
src-tauri/crates/oxidebt-torrent/src/: error.rs  info_hash.rs  lib.rs  magnet.rs  merkle.rs  metainfo.rs  tests.rs
src-tauri/crates/oxidebt-tracker/: Cargo.toml
src-tauri/crates/oxidebt-tracker/src/: error.rs  http.rs  lib.rs  response.rs  tests.rs  udp.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/engine/: error.rs  events.rs  metadata.rs  mod.rs  peer_connection.rs  peer_info.rs  pex.rs  rss.rs  search.rs  settings.rs  stats.rs  torrent.rs  tracker_info.rs  watch.rs
src-tauri/tests/: integration_tests.rs
src/components/: AddTorrentModal.tsx  DetailPanel.tsx  ErrorBoundary.tsx  Icons.tsx  ResizablePanel.tsx  RssModal.tsx  SearchModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatusBar.tsx  StatusIndicator.tsx  Toolbar.tsx  TorrentList.tsx  index.ts
src/hooks/: useTheme.ts
