[workspace]
resolver = "2"
members = [".", "crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jasper"]
license = "MIT"
rust-version = "1.82"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
thiserror = "2.0"
bytes = "1.9"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
rand = "0.8"
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

[package]
name = "rbitt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A BitTorrent client built with Tauri"

[lib]
name = "rbitt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = { workspace = true }
oxidebt-constants = { path = "crates/oxidebt-constants" }
oxidebt-bencode = { path = "crates/oxidebt-bencode" }
oxidebt-torrent = { path = "crates/oxidebt-torrent" }
oxidebt-peer = { path = "crates/oxidebt-peer" }
oxidebt-tracker = { path = "crates/oxidebt-tracker" }
oxidebt-dht = { path = "crates/oxidebt-dht" }
oxidebt-disk = { path = "crates/oxidebt-disk" }
oxidebt-net = { path = "crates/oxidebt-net" }
bytes = "1.9"
sha1 = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
dirs = "5.0"
uuid = { version = "1.11", features = ["v4"] }
regex = "1.11"
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3.20"

[[example]]
name = "generate_torrents"
path = "../examples/generate_torrents.rs"
