[package]
name = "oxidebt-disk"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
dashmap = "6.1"
futures = "0.3"
oxidebt-cache = { path = "../oxidebt-cache" }
parking_lot = "0.12"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["fs", "io-util", "sync", "time", "rt", "macros"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3.20"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
