[package]
name = "oxidebt-disk"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
dashmap = "6.1"
futures = { workspace = true }
oxidebt-cache = { path = "../oxidebt-cache" }
parking_lot = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.27"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
