[package]
name = "oxidebt-net"
version = "0.1.0"
edition = "2024"

[dependencies]
oxidebt-constants = { path = "../oxidebt-constants" }
bytes = "1.10"
parking_lot = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["net", "sync", "time", "io-util", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
