[package]
name = "oxidebt-net"
version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
oxidebt-constants = { path = "../oxidebt-constants" }
bytes = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
